--- a/config/config.json
+++ b/config/config.json
@@ -24,5 +24,11 @@
   "max_commits_per_repo": 50,
   "max_file_size_kb": 100,
   "cursor_plans_dir": ".cursor/plans",
-  "summary_template": "prompts/daily_summary_prompt.md"
+  "summary_template": "prompts/daily_summary_prompt.md",
+  "ai_provider": "anthropic",
+  "ai_model": "claude-3-5-sonnet-20241022",
+  "ai_temperature": 0.7,
+  "use_cursor_logs": true,
+  "use_cursor_memory": true,
+  "use_ai_journal": true
 }
