--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,10 @@
 # Core
 python-dateutil>=2.8.2
 
+# AI Integration (choose one or both)
+anthropic>=0.18.0  # For Claude API
+openai>=1.12.0     # For OpenAI API
+
 # Optional: For enhanced git operations
 GitPython>=3.1.40
 
