--- a/config/config.json
+++ b/config/config.json
@@ -26,7 +26,7 @@
   "cursor_plans_dir": ".cursor/plans",
   "summary_template": "prompts/daily_summary_prompt.md",
   "ai_provider": "anthropic",
-  "ai_model": "claude-3-5-sonnet-20241022",
+  "ai_model": "claude-3-haiku-20240307",
   "ai_temperature": 0.7,
   "use_cursor_logs": true,
   "use_cursor_memory": true,
