Switch default AI model to GPT-5 mini
- Update config.json to use OpenAI GPT-5 mini
- Update code defaults to GPT-5 mini
- Update AI_MODELS.md recommendation
- GPT-5 mini is latest generation with best value (--.0015/day)

--- a/config/config.json
+++ b/config/config.json
@@ -25,8 +25,8 @@
   "max_file_size_kb": 100,
   "cursor_plans_dir": ".cursor/plans",
   "summary_template": "prompts/daily_summary_prompt.md",
-  "ai_provider": "anthropic",
-  "ai_model": "claude-3-haiku-20240307",
+  "ai_provider": "openai",
+  "ai_model": "gpt-5-mini",
   "ai_temperature": 0.7,
   "use_cursor_logs": true,
   "use_cursor_memory": true,
